--- a/index.html
+++ b/index.html
@@ -6,6 +6,29 @@
   </head>
   <body>
     <!-- Add this inside the body tag -->
+    <div id="foodModal" class="modal">
+      <div class="modal-content">
+        <h2>Choose food</h2>
+        <button id="potato">
+          <img src="potato.png" alt="Potato" />
+          Potato
+        </button>
+        <button id="bread">
+          <img src="bread.png" alt="Bread" />
+          Bread
+        </button>
+        <button id="lollypop">
+          <img src="lollypop.png" alt="Lollypop" />
+          Lollypop
+        </button>
+        <button id="sodaPop">
+          <img src="soda_pop.png" alt="Soda Pop" />
+          Soda Pop
+        </button>
+        <button id="exitFoodModal">Exit</button>
+      </div>
+    </div>
+
     <div id="startModal" class="modal">
       <div class="modal-content">
         <h2>Start Game</h2>
