--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <link rel="stylesheet" type="text/css" href="styles.css" />
   </head>
   <body>
+    <div id="notEnoughCoinsModal" class="modal">
+      <div class="modal-content">
+        <h2>Not Enough Coins</h2>
+        <p>You don't have enough coins for this food.</p>
+        <button id="closeNotEnoughCoins">Close</button>
+      </div>
+    </div>
+
     <!-- Add this inside the body tag -->
     <div id="foodModal" class="modal">
       <div class="modal-content">
