--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
       </div>
 
       <div id="petArea">
-        <img id="petImg" alt="Your pet" />
+        <div id="petContainer">
+          <img id="petImg" alt="Your pet" />
+        </div>
       </div>
 
       <div id="stats">
