--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
       </div>
 
       <div id="petArea">
+        <div id="poopContainer"></div>
         <div id="petContainer">
           <img id="petImg" alt="Your pet" />
         </div>
