coin smash update

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
   </head>
   <body>
     <div id="coinSmashGame" class="game">
-      <img id="coinSmashCoin" src="coin.png" alt="Coin" />
+      <h2 id="gamePrompt">SMASH THE COIN!</h2>
+      <div id="coinContainer">
+        <img id="coinSmashCoin" src="coin.png" alt="Coin" />
+      </div>
     </div>
 
     <div id="notEnoughCoinsModal" class="modal">
