--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <link rel="stylesheet" type="text/css" href="styles.css" />
   </head>
   <body>
+    <div id="numberRushGame" class="game">
+      <h2 id="numberRushPrompt">CLICK ON THE NUMBERS IN ASCENDING ORDER!</h2>
+      <h3 id="numberRushTimer"></h3>
+      <!-- Number buttons will be added here -->
+    </div>
+
     <div id="coinSmashGame" class="game">
       <h2 id="gamePrompt">SMASH THE COIN!</h2>
       <div id="coinContainer">
