--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@
     <div id="game">
       <div id="header">
         <h1><span id="petNameDisplay"></span> <img id="genderIcon" /></h1>
+        <span id="levelDisplay">Level: 1</span>
+
         <div id="coins">
           <img src="coin.png" alt="Coins" />
           <span id="coinAmount"></span>
@@ -105,6 +107,8 @@
 
       <div id="stats">
         <div class="stat">
+          <label>Experience:</label>
+          <progress id="experience" value="0" max="10"></progress>
           <label>Hunger:</label>
           <progress id="hunger" value="100" max="100"></progress>
         </div>
