--- a/index.html
+++ b/index.html
@@ -71,8 +71,11 @@
     </div>
 
     <div id="menu">
-      <button id="start">Start</button>
-      <button id="instructionsButton">Instructions</button>
+      <h1>Tamagucki</h1>
+      <div class="menu-buttons">
+        <button id="start">Start</button>
+        <button id="instructionsButton">Instructions</button>
+      </div>
     </div>
 
     <div id="instructionsModal" class="modal">
