--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <link rel="stylesheet" type="text/css" href="styles.css" />
   </head>
   <body>
+    <!-- Level Up Modal -->
+    <div id="levelUpModal" class="modal">
+      <div class="modal-content">
+        <h2>Congratulations!</h2>
+        <p id="levelUpMessage">Your pet has leveled up to Level 1!</p>
+        <p id="levelUpReward">You've been awarded 5 coins!</p>
+        <button id="closeLevelUpModal">Close</button>
+      </div>
+    </div>
+
     <div id="numberRushGame" class="game">
       <h2 id="numberRushPrompt">CLICK ON THE NUMBERS IN ASCENDING ORDER!</h2>
       <h3 id="numberRushTimer"></h3>
