burger and sushi added

--- a/index.html
+++ b/index.html
@@ -66,6 +66,17 @@
           Soda Pop <img class="coinImage" src="coin.png" alt="Coins" /> 3
         </button>
 
+        <button id="burger" class="locked-food">
+          <img src="burger.png" alt="Burger" />
+          Burger <img class="coinImage" src="coin.png" alt="Coins" /> 4
+          <span class="unlock-level">Unlocked at Level 5</span>
+        </button>
+        <button id="sushi" class="locked-food">
+          <img src="sushi.png" alt="Sushi" />
+          Sushi <img class="coinImage" src="coin.png" alt="Coins" /> 5
+          <span class="unlock-level">Unlocked at Level 7</span>
+        </button>
+
         <button id="exitFoodModal">Exit</button>
       </div>
     </div>
