--- a/index.html
+++ b/index.html
@@ -202,6 +202,8 @@
         </div>
       </div>
     </div>
-    <script src="./js/game.js"></script>
+    <script src="./js/core/Pet.js"></script>
+    <script src="./js/core/game.js"></script>
+    <script src="./js/core/numberrushgame.js"></script>
   </body>
 </html>
