--- a/index.html
+++ b/index.html
@@ -329,6 +329,6 @@
     </div>
     <script src="./js/core/Pet.js"></script>
     <script src="./js/core/game.js"></script>
-    <script src="./js/core/numberrushgame.js"></script>
+    <script src="./js/core/NumberRushGame.js"></script>
   </body>
 </html>
