--- a/index.html
+++ b/index.html
@@ -75,18 +75,41 @@
             />
             5
           </button>
-          <button id="whiteSneakers">
+          <button id="bucketPropellerHat">
             <img
-              src="./assets/images/clothing/white_sneakers.png"
-              alt="White Sneakers"
+              src="./assets/images/clothing/bucketpropeller_hat.png"
+              alt="Bucket Propeller Hat"
             />
-            White Sneakers
+            Bucket Propeller Hat
             <img
               class="coinImage"
               src="./assets/images/misc/coin.png"
               alt="Coins"
             />
             10
+          </button>
+          <button id="baseballHat">
+            <img
+              src="./assets/images/clothing/baseball_hat.png"
+              alt="Baseball Hat"
+            />
+            Baseball Hat
+            <img
+              class="coinImage"
+              src="./assets/images/misc/coin.png"
+              alt="Coins"
+            />
+            12
+          </button>
+          <button id="witchHat">
+            <img src="./assets/images/clothing/witch_hat.png" alt="Witch Hat" />
+            Witch Hat
+            <img
+              class="coinImage"
+              src="./assets/images/misc/coin.png"
+              alt="Coins"
+            />
+            15
           </button>
 
           <button id="exitClothingShop">Exit</button>
