only wear a hat at a time

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div id="clothingShop" class="shop-section" style="display: none">
           <h3>Choose Clothing</h3>
 
-          <button id="propellerHat">
+          <button id="propellerHat" class="hat">
             <img
               src="./assets/images/clothing/propeller_hat.png"
               alt="Propeller Hat"
@@ -75,7 +75,7 @@
             />
             5
           </button>
-          <button id="bucketPropellerHat">
+          <button id="bucketPropellerHat" class="hat">
             <img
               src="./assets/images/clothing/bucketpropeller_hat.png"
               alt="Bucket Propeller Hat"
@@ -88,7 +88,7 @@
             />
             10
           </button>
-          <button id="baseballHat">
+          <button id="baseballHat" class="hat">
             <img
               src="./assets/images/clothing/baseball_hat.png"
               alt="Baseball Hat"
@@ -101,7 +101,7 @@
             />
             12
           </button>
-          <button id="witchHat">
+          <button id="witchHat" class="hat">
             <img src="./assets/images/clothing/witch_hat.png" alt="Witch Hat" />
             Witch Hat
             <img
