--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <link rel="stylesheet" type="text/css" href="./css/styles.css" />
   </head>
   <body>
+    <div id="inventoryModal" class="modal">
+      <div class="modal-content">
+        <h2>Your Inventory</h2>
+        <div id="inventoryItems"></div>
+        <button id="closeInventoryModal">Close</button>
+      </div>
+    </div>
     <!-- Shop Modal -->
     <div id="shopModal" class="modal">
       <div class="modal-content">
@@ -381,6 +388,7 @@
         <button id="play">Play</button>
         <button id="clean">Clean</button>
         <button id="shop">Shop</button>
+        <button id="inventory">Inventory</button>
       </div>
 
       <div id="gameOverModal" class="modal">
