--- a/index.html
+++ b/index.html
@@ -119,6 +119,61 @@
             15
           </button>
 
+          <!-- File: index.html -->
+
+          <button id="cuteBowtie" class="bowtie">
+            <img
+              src="./assets/images/clothing/cute_bowtie.png"
+              alt="Cute Bowtie"
+            />
+            Cute Bowtie
+            <img
+              class="coinImage"
+              src="./assets/images/misc/coin.png"
+              alt="Coins"
+            />
+            10
+          </button>
+          <button id="pinkPolkaBowtie" class="bowtie">
+            <img
+              src="./assets/images/clothing/pinkpolka_bowtie.png"
+              alt="Pink Polka Bowtie"
+            />
+            Pink Polka
+            <img
+              class="coinImage"
+              src="./assets/images/misc/coin.png"
+              alt="Coins"
+            />
+            12
+          </button>
+          <button id="manlyNavyBlueBowtie" class="bowtie">
+            <img
+              src="./assets/images/clothing/navyblue_bowtie.png"
+              alt="Manly Navy Blue Bowtie"
+            />
+            Manly Navy Blue
+            <img
+              class="coinImage"
+              src="./assets/images/misc/coin.png"
+              alt="Coins"
+            />
+            15
+          </button>
+          <button id="girlyNavyBlueBowtie" class="bowtie">
+            <img
+              src="./assets/images/clothing/navybluegirl_bowtie.png"
+              alt="Girly Navy Blue Bowtie"
+            />
+            Girly Navy Blue
+            <img
+              class="coinImage"
+              src="./assets/images/misc/coin.png"
+              alt="Coins"
+            />
+            18
+          </button>
+
           <button id="exitClothingShop">Exit</button>
         </div>
       </div>
