--- a/index.html
+++ b/index.html
@@ -63,6 +63,19 @@
               <span class="unlock-level">Unlocked at Level 3</span>
             </div>
           </button>
+          <button id="background4">
+            <img
+              src="./assets/images/backgrounds/soccer_bg.png"
+              alt="Background 4"
+            />
+            Background 4
+            <img
+              class="coinImage"
+              src="./assets/images/misc/coin.png"
+              alt="Coins"
+            />
+            1
+          </button>
 
           <button id="exitShopModal">Exit</button>
         </div>
